Add beginner-friendly technical guide for experiment execution
This commit adds a detailed, beginner-friendly technical guide written in Portuguese,
providing step-by-step instructions for installing, compiling, and executing the
GlobalAmBC-DRL experiments.

The guide is intended to support users with no prior experience in OMNeT++ or
network simulation, improving accessibility, reproducibility, and educational use
of the project.

--- a/omnetpp/simulations/baseline.ini
+++ b/omnetpp/simulations/baseline.ini
@@ -1,29 +1,24 @@
-package globalambc.network;
+[General]
+network = globalambc.network.BatterylessNetwork
+sim-time-limit = 300s
 
-import inet.networklayer.configurator.ipv4.Ipv4NetworkConfigurator;
-import inet.node.inet.StandardHost;
-import inet.physicallayer.contract.packetlevel.IRadioMedium;
-import inet.physicallayer.ieee80211.packetlevel.Ieee80211ScalarRadioMedium;
+# Número de nós (rede densa)
+*.numNodes = 50
 
-network BatterylessNetwork
-{
-    parameters:
-        int numNodes = default(50);   // Rede densa
-    submodules:
-        configurator: Ipv4NetworkConfigurator {
-            @display("p=100,50");
-        }
+# Mobilidade estática
+*.node[*].mobility.typename = "StationaryMobility"
 
-        radioMedium: Ieee80211ScalarRadioMedium {
-            @display("p=100,100");
-        }
+# Aplicação simples de tráfego UDP
+*.node[*].numApps = 1
+*.node[*].app[0].typename = "UdpBasicApp"
+*.node[*].app[0].appName = "baselineTraffic"
+*.node[*].app[0].destAddresses = "node[0]"
+*.node[*].app[0].destPort = 5000
+*.node[*].app[0].messageLength = 64B
+*.node[*].app[0].sendInterval = exponential(1s)
 
-        node[numNodes]: StandardHost {
-            @display("i=device/wifilaptop;p=200,200,row,50");
-        }
+# Potência fixa (sem controle adaptativo)
+*.node[*].wlan[0].radio.transmitter.power = 1mW
 
-        // Módulo lógico de controle sistêmico
-        globalController: GlobalAmBCDRLModule {
-            @display("i=block/control;p=400,150");
-        }
-}
+# Controlador global DESATIVADO
+*.globalController.enabled = false
