--- a/omnetpp/simulations/drl_enabled.ini
+++ b/omnetpp/simulations/drl_enabled.ini
@@ -2,24 +2,44 @@
 network = globalambc.network.BatterylessNetwork
 sim-time-limit = 300s
 
-# Número de nós
+# =========================================================
+# Configuração da rede
+# =========================================================
+
+# Rede densa
 *.numNodes = 50
 
-# Mobilidade estática
+# Mobilidade estática (cenário controlado)
 *.node[*].mobility.typename = "StationaryMobility"
 
+# =========================================================
 # Aplicação de tráfego
+# =========================================================
+
 *.node[*].numApps = 1
 *.node[*].app[0].typename = "UdpBasicApp"
+*.node[*].app[0].appName = "drlTraffic"
 *.node[*].app[0].destAddresses = "node[0]"
 *.node[*].app[0].destPort = 5000
 *.node[*].app[0].messageLength = 64B
 *.node[*].app[0].sendInterval = exponential(1s)
 
-# Potência inicial (ajustada dinamicamente pelo controlador)
+# =========================================================
+# Configuração física / energética
+# =========================================================
+
+# Potência inicial (ajustada dinamicamente pelo controlador DRL)
 *.node[*].wlan[0].radio.transmitter.power = 1mW
 
-# Ativa o módulo GlobalAmBC-DRL
+# =========================================================
+# GlobalAmBC-DRL Control Module
+# =========================================================
+
+# Ativa o controlador global
 *.globalController.enabled = true
+
+# Intervalo de decisão do controlador (tempo de simulação)
 *.globalController.controlInterval = 1s
+
+# Política de controle (abstração lógica)
 *.globalController.policy = "DRL"
